Details View: Add variable to modify description width with ThemeModifier extension

--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -1,6 +1,10 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
+
+    <!--region ThemeModifier variables-->
+    <sys:Double x:Key="DetailsViewDescriptionWidth">300</sys:Double>
+    <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
     <sys:Double x:Key="FontSize">14</sys:Double>
