--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -4,6 +4,7 @@
 
     <!--region ThemeModifier variables-->
     <sys:Double x:Key="DetailsViewDescriptionWidth">300</sys:Double>
+    <sys:Boolean x:Key="DetailsViewDescriptionDockToRight">false</sys:Boolean>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
