--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -418,7 +418,18 @@
                                                         <ScrollViewer Height="{Binding ElementName=ContainerHeightBorder, Path=ActualHeight}" VerticalScrollBarVisibility="Disabled"
                                                                   HorizontalScrollBarVisibility="Auto">
                                                             <DockPanel>
-                                                                <ScrollViewer Name="PART_ElemDescription" DockPanel.Dock="Left" Width="{DynamicResource DetailsViewDescriptionWidth}" Margin="0,0,15,0" >
+                                                                <ScrollViewer Name="PART_ElemDescription" Tag="{DynamicResource DetailsViewDescriptionDockToRight}"
+                                                                              Width="{DynamicResource DetailsViewDescriptionWidth}" Margin="0,0,15,0">
+                                                                    <ScrollViewer.Style>
+                                                                        <Style TargetType="ScrollViewer">
+                                                                            <Setter Property="DockPanel.Dock" Value="Left" />
+                                                                            <Style.Triggers>
+                                                                                <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag}" Value="true">
+                                                                                    <Setter Property="DockPanel.Dock" Value="Right" />
+                                                                                </DataTrigger>
+                                                                            </Style.Triggers>
+                                                                        </Style>
+                                                                    </ScrollViewer.Style>
                                                                     <StackPanel>
                                                                         <TextBlock Text="{DynamicResource LOCGameDescriptionTitle}" Margin="0,15,0,5"
                                                                                Style="{DynamicResource BaseTextBlockStyle}" Visibility="Collapsed"/>
